--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,62 @@
-.App {
-  text-align: center;
+/*
+
+    GENERAL
+
+purple = #7342D6
+
+*/
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
+  font-family: "Roboto", sans-serif;
+  font-size: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html {
+  scroll-behavior: smooth;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  background-color: #f5f5f5;
+  max-width: 100vw;
+  overflow-x: hidden; /* disable horizontal scroll */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+a,
+a:visited {
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
+a,
+button {
+  cursor: pointer;
+  font-size: inherit;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+span {
+  font-size: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 700;
+}
+
+
+/*
+
+  REUSABLES
+
+*/
+
+.text--purple {
+  color: #7342D6;
 }
