--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -16,10 +16,12 @@
 
 .nav__list {
   display: flex;
+  align-items: center;
   list-style-type: none;
 }
 
-.nav__list--item {
+.nav__list--item,
+.nav__icon  {
   padding: 8px;
   margin-left: 24px;
   font-size: 1.25rem;
@@ -44,6 +46,42 @@
 
 /*
 
+    Popup
+
+*/
+
+.popup--backdrop {
+  z-index: -1;
+  visibility: hidden;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.menu--open .popup--backdrop {
+  z-index: 1;
+  visibility: visible;
+}
+
+.popup {
+  visibility: hidden;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.menu--open .popup {
+  visibility: visible;
+  width: 100px;
+  height: 100px;
+  background-color: red;
+}
+
+/*
+
     Mobile
 
 */
@@ -61,6 +99,10 @@
 }
 
 @media (max-width:760px) {
+  .nav__list--item {
+    display: none;
+  }
+
   .btn__menu--wrapper {
     display: block;
   }
