--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,6 @@ h5 {
   font-weight: 700;
 }
 
-
 /*
 
   REUSABLES
@@ -59,4 +58,19 @@ h5 {
 
 .text--purple {
   color: #7342D6;
+}
+
+.btn {
+  background-color: #7342D6;
+  margin-bottom: 24px;
+  padding: 12px 24px;
+  font-size: 1.25rem;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  transition: opacity 250ms ease;
+}
+
+.btn:hover {
+  opacity: 0.9;
 }
