--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,3 +1,20 @@
+/*
+
+    REUSABLES
+
+*/
+
+.section__title {
+  margin-bottom: 40px;
+  font-size: 2rem;
+}
+
+/*
+
+    LANDING
+
+*/
+
 .header__container {
   height: calc(100vh - 100px);
   max-width: 720px;
@@ -25,4 +42,51 @@
   padding: 20px;
 }
 
+/*
 
+    FEATURES
+
+*/
+
+#features {
+  text-align: center;
+}
+
+.highlights__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.highlight {
+  padding: 0 24px;
+  flex-basis: calc(100% / 3)
+}
+
+.highlight__icon--wrapper {
+  width: 100px;
+  height: 100px;
+  margin: 0 auto 24px;
+  border: 2px solid #7342D6;
+  border-radius: 4px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.highlight__icon {
+  color: #7342D6;
+  font-size: 32px;
+}
+
+.highlight__title {
+  font-size: 20px;
+  margin-bottom: 16px;
+}
+
+.highlight__para {
+  margin-bottom: 24px;
+  max-width: 280px;
+  margin: 0 auto;
+}
