--- a/src/App.css
+++ b/src/App.css
@@ -6,25 +6,19 @@ purple = #7342D6
 
 */
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
-  font-family: "Roboto", sans-serif;
-  font-size: 1rem;
-}
-
-html {
-  scroll-behavior: smooth;
+  font-family: 'Roboto', sans-serif;
 }
 
 body {
-  background-color: #f5f5f5;
+  /* disable horizontal scroll */
   max-width: 100vw;
-  overflow-x: hidden; /* disable horizontal scroll */
+  overflow-x: hidden;
 }
 
 a,
@@ -35,19 +29,6 @@ a:visited {
 a,
 button {
   cursor: pointer;
-  font-size: inherit;
-}
-
-span {
-  font-size: inherit;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5 {
-  font-weight: 700;
 }
 
 /*
