--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,9 +5,16 @@
 */
 
 .section__title {
-  margin-bottom: 40px;
+  margin-bottom: 32px;
   font-size: 2rem;
   text-align: center;
+}
+
+.row--center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 /*
@@ -61,6 +68,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 60px;
 }
 
 .highlight {
@@ -112,12 +120,7 @@
 
 .book {
   flex-basis: 25%;
-  padding: 24px;
-  /* display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  gap: 8px; */
+  padding: 0 24px 24px;
 }
 
 .book > * {
