--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body {
 a,
 a:visited {
   text-decoration: none;
+  color: inherit;
 }
 
 a,
@@ -49,6 +50,7 @@ button {
   max-width: 1200px;
   margin: 0 auto;
   width: 100%;
+  padding: 0 24px;
 }
 .btn {
   background-color: #7342D6;
