--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -3,12 +3,8 @@
   padding: 0 24px 24px;
 }
 
-.book > * {
-  /* all book elems (img, title, rating, etc) should take up full width */
-  width: 100%;
-}
-
 .book__img--wrapper {
+  width: 100%;
   height: 450px;
   display: flex;
   align-items: center;
@@ -26,6 +22,12 @@
 
 .book__img--wrapper:hover .book__img {
   transform: scale(1.03)
+}
+
+.book__info {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: start;
 }
 
 .book__title {
