--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -40,8 +40,27 @@
   border-radius: 4px;
 }
 
+.nav__icon {
+  position: relative;
+}
+
 .nav__cart-icon {
   font-size: 20px;
+}
+
+.cart__length {
+  background-color: red;
+  color: white;
+  width: 18px;
+  height: 18px;
+  font-size: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 4px;
+  right: -4px;
 }
 
 /*
