--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -21,9 +21,10 @@
 }
 
 .cart-item {
-  margin-top: 24px;
   display: flex;
   justify-content: space-between;
+  border-bottom: 1px solid gray;
+  padding: 24px 0;
 }
 
 .cart__header-books,
@@ -113,4 +114,16 @@
 
 .cart-item__price {
   width: 100px;
+  padding-right: 16px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  font-weight: bold;
 }
+
+/*
+
+    Totals
+
+*/
+
