--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -17,7 +17,13 @@
 }
 
 .cart__empty-message {
-  margin-top: 24px;
+  margin: 48px 0 24px;
+  font-size: 1.25rem;
+}
+
+.btn--cart-empty {
+  padding-left: 48px;
+  padding-right: 48px;
 }
 
 .cart-item {
@@ -126,4 +132,3 @@
     Totals
 
 */
-
