--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -14,6 +14,9 @@
 
 .cart__contents {
   min-height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .cart__empty-message {
@@ -21,6 +24,11 @@
   font-size: 1.25rem;
 }
 
+.cart__empty-img {
+  max-width: 320px;
+  object-fit: contain;
+  margin-top: 40px;
+}
 .btn--cart-empty {
   padding-left: 48px;
   padding-right: 48px;
