--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -46,3 +46,38 @@
   color: #BFBFBF;
   margin-right: 6px;
 }
+
+/*
+
+    SKELETON
+
+*/
+.book__img--skeleton {
+  height: 360px;
+  width: 250px;
+  background-color: rgb(204, 204, 204);
+  border-radius: 2px;
+}
+
+.book__title--skeleton,
+.book__rating--skeleton,
+.book__price--skeleton {
+  background-color: rgb(223, 223, 223);
+  margin-top: 8px;
+  border-radius: 1px
+}
+
+.book__title--skeleton {
+  width: 100%;
+  height: 22px;
+}
+
+.book__rating--skeleton {
+  width: 40%;
+  height: 19px;
+}
+
+.book__price--skeleton {
+  width: 70%;
+  height: 19px;
+}
