remove unused starter react files + unused imports + set some css properties to flex-start instead of start

--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -134,7 +134,7 @@
 .cart-item__price {
   padding-right: 16px;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   font-weight: bold;
 }
