--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-/*
-
-    GENERAL
-
-purple = #7342D6
-
-*/
-
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 * {
@@ -16,7 +8,6 @@ purple = #7342D6
 }
 
 body {
-  /* disable horizontal scroll */
   max-width: 100vw;
   overflow-x: hidden;
 }
@@ -32,6 +23,14 @@ button {
   cursor: pointer;
 }
 
+input, select, textarea, button {
+  font-family: inherit;
+}
+
+:root {
+  --purple-color: #7342D6;
+}
+
 /*
 
   REUSABLES
@@ -39,7 +38,7 @@ button {
 */
 
 .text--purple {
-  color: #7342D6;
+  color: var(--purple-color);
 }
 
 .text--left {
@@ -56,8 +55,9 @@ button {
   width: 100%;
   padding: 0 24px;
 }
+
 .btn {
-  background-color: #7342D6;
+  background-color: var(--purple-color);
   margin-bottom: 24px;
   padding: 12px 24px;
   font-size: 1.25rem;
