--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -29,7 +29,7 @@
 .book__info {
   display: inline-flex;
   flex-direction: column;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .book__title {
