--- a/src/pages/BookInfo/BookInfo.css
+++ b/src/pages/BookInfo/BookInfo.css
@@ -24,7 +24,7 @@
 .book-selected__container {
   margin-top: 24px;
   display: flex;
-  align-items: start;
+  align-items: flex-start;
 }
 
 .book-selected__img {
