--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -45,13 +45,10 @@
   margin-bottom: 32px;
 }
 
-.header__img--wrapper {
-  max-height: 50vh;
-  padding: 20px;
-}
-
 .header__img {
-  height: 100%;
+  height: 50vh;
+  padding: 20px;
+  object-fit: contain;
 }
 
 /*
@@ -66,7 +63,7 @@
 
 .highlights__wrapper {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   margin-top: 60px;
 }
@@ -111,4 +108,19 @@
 */
 #featured {
   text-align: start;
+}
+
+
+@media screen and (max-width: 768px) {
+  .header__title {
+    font-size: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .header__img {
+    height: 35vh;
+  }
 }
