--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,10 +1,5 @@
-.nav__container {
-  max-width: 1200px;
-  width: 100%;
-  margin: 0 auto;
+nav .container {
   height: 100px;
-  padding: 0 24px;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
