--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,6 @@
   font-family: 'Roboto', sans-serif;
 }
 
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
 a,
 a:visited {
   text-decoration: none;
@@ -71,10 +66,6 @@ input, select, textarea, button {
 	padding-left: 16px
 }
 
-.col-padding {
-  padding: 56px 0;
-}
-
 .fc {
   flex-direction: column;
 }
@@ -85,6 +76,11 @@ input, select, textarea, button {
 
 .jcsb {
   justify-content: space-between;
+}
+
+section > .container {
+  padding-top: 56px;
+  padding-bottom: 56px;
 }
 
 /*  */
@@ -116,4 +112,8 @@ input, select, textarea, button {
 
 .text--left {
   text-align: left !important;
+}
+
+.text--center {
+  text-align: center;
 }
