--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -66,16 +66,21 @@ nav .container {
 
 .modal {
   visibility: hidden;
-  position: absolute;
-  left: 0;
-  right: 0;
+  position: fixed;
   top: 0;
-  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: #242424;
+  z-index: 999;
 }
 
-.menu--open .modal {
+.modal--open .modal {
   visibility: visible;
+}
+
+body.modal--open {
+  overflow: hidden; /* prevent page scroll if modal is open */
 }
 
 .modal__x-icon {
