--- a/src/pages/Home/Landing.css
+++ b/src/pages/Home/Landing.css
@@ -1,5 +1,5 @@
 header .container {
-  height: calc(100vh - 100px);
+  height: calc(100vh - var(--nav-height));
   max-width: 720px;
 
   display: flex;
