--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ input, select, textarea, button {
 
 :root {
   --purple-color: #7342D6;
+  --nav-height: 100px;
 }
 
 /*
@@ -104,7 +105,7 @@ input, select, textarea, button {
 }
 
 .section__title {
-  margin-bottom: 32px;
+  margin-bottom: 48px;
   font-size: 2rem;
   text-align: center;
 }
