--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,5 +1,5 @@
 nav .container {
-  height: 100px;
+  height: var(--nav-height);
   display: flex;
   justify-content: space-between;
   align-items: center;
