--- a/src/pages/Cart/Cart.css
+++ b/src/pages/Cart/Cart.css
@@ -1,3 +1,12 @@
+#cart .section__title {
+  margin-bottom: 16px;
+}
+
+#cart h2 {
+  text-align: left;
+  font-size: 36px;
+}
+
 .cart__title {
   font-size: 2rem;
 }
