add BooksGrid into books route + add discounted book section into home page

--- a/src/pages/Books/Books.css
+++ b/src/pages/Books/Books.css
@@ -1,18 +1,18 @@
+#books__main .container {
+  padding-top: 36px;
+  padding-bottom: 96px;
+}
+
 .section__title.books__header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 24px;
+  margin-bottom: 60px;
 }
 
 .books__header--title {
   margin: 0;
   font-size: 40px;
-}
-
-#books__body .books__container {
-  margin-top: 0;
-  margin-bottom: 0;
 }
 
 .books__header select {
