--- a/src/pages/Books/Books.css
+++ b/src/pages/Books/Books.css
@@ -1,9 +1,9 @@
-#books__main .container {
+#browse-books .container {
   padding-top: 36px;
-  padding-bottom: 96px;
+  padding-bottom: 100px;
 }
 
-.section__title.books__header {
+#browse-books .section__title {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -15,7 +15,7 @@
   font-size: 40px;
 }
 
-.books__header select {
+#browse-books select {
   background-color: #fff;
   border-radius: 4px;
   border: 1px solid #dcdfe6;
@@ -35,11 +35,11 @@
 }
 
 @media screen and (max-width: 480px) {
-  .books__header {
+  #browse-books .section__title {
     flex-direction: column;
   }
 
-  .books__header select {
+  #browse-books select {
     margin-top: 16px;
   }
 }
