--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -17,10 +17,13 @@ nav .container {
 
 .nav__list--item,
 .shopping-cart {
-  padding: 8px;
   margin-left: 24px;
   font-size: 1.25rem;
   font-weight: bold;
+}
+
+.nav__list--link {
+  padding: 8px;
 }
 
 .nav__list--link,
@@ -30,7 +33,7 @@ nav .container {
   color: #7342d6;
 }
 
-.nav__link--primary {
+.nav__list--link.primary {
   border: 2px solid #7342d6;
   border-radius: 4px;
 }
