--- a/src/pages/Books/Books.css
+++ b/src/pages/Books/Books.css
@@ -29,6 +29,11 @@
 }
 
 @media screen and (max-width: 576px) {
+  #browse-books .container {
+    padding-top: 24px;
+    padding-bottom: 60px;
+  }
+
   select {
     max-width: 160px;
   }
