--- a/src/pages/Home/WhyChooseLibrary.css
+++ b/src/pages/Home/WhyChooseLibrary.css
@@ -1,19 +1,23 @@
 .highlights {
-  align-items: flex-start;
-  justify-content: space-evenly;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-auto-flow: column;
+  column-gap: 20px;
+  max-width: 1000px;
+  margin: 0 auto;
 }
 
-.highlights .highlight {
-  width: 20%;
+.highlights .easy {
+  grid-column: 1 / 2;
 }
 
 .highlight__icon--wrapper {
   width: 100px;
   height: 100px;
-  margin: 0 auto 24px;
+  margin: 0 auto;
   border: 2px solid var(--purple-color);
   border-radius: 4px;
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -25,30 +29,24 @@
 }
 
 .highlight__title {
+  margin-top: 20px;
+  margin-bottom: 12px;
   font-size: 20px;
-  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .highlight__para {
-  margin-bottom: 24px;
-  max-width: 280px;
+  max-width: 250px;
   margin: 0 auto;
 }
 
-@media screen and (max-width: 992px) {
-  .highlights .highlight {
-    width: 25%;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .highlights .highlight {
-    width: calc(100% / 3);
-    padding: 0 24px;
-  }
-}
-
 @media screen and (max-width: 480px) {
+  .highlights {
+    column-gap: 16px;
+  }
+
   .highlight__title {
     font-size: 18px;
   }
@@ -60,10 +58,6 @@
   .highlight__icon--wrapper {
     width: 80px;
     height: 80px;
-  }
-
-  .highlights .highlight {
-    padding: 0 10px;
   }
 
   .highlight__icon {
