--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -146,3 +146,9 @@ body.mobile-menu-open {
     display: block;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .nav__logo {
+    width: 120px;
+  }
+}
