--- a/src/pages/Home/Landing.css
+++ b/src/pages/Home/Landing.css
@@ -1,10 +1,6 @@
-header .container {
-  height: calc(100vh - var(--nav-height));
+#landing .container {
+  min-height: calc(100vh - var(--nav-height));
   max-width: 720px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
 }
 
 .header__title {
@@ -19,16 +15,15 @@ header .container {
 }
 
 .header__img {
-  height: 50vh;
-  padding: 20px;
+  height: 40vh;
+  width: 100%;
   object-fit: contain;
+  margin-top: 32px;
 }
 
 @media screen and (max-width: 768px) {
   .header__title {
     font-size: 40px;
-    padding-left: 20px;
-    padding-right: 20px;
   }
 }
 
