--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -67,56 +67,51 @@ nav .container {
 
 */
 
-.mobile-menu {
-  visibility: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #242424;
-  z-index: 999;
+.modal-backdrop:has(.nav-modal) {
+  justify-content: flex-end;
+  padding: 0;
 }
 
-.mobile-menu-open .mobile-menu {
-  visibility: visible;
+.nav-modal {
+  background-color: var(--purple-color);
+  padding: 0 48px;
+  border-radius: 0;
 }
 
-body.mobile-menu-open {
-  overflow: hidden; /* prevent page scroll if modal is open */
-}
-
-.mobile-menu .x-icon {
-  color: white;
-  font-size: 48px;
+.nav-modal .x-icon {
+  color: #fff;
+  font-size: 2rem;
   position: absolute;
   right: 24px;
-  top: 24px;
+  top: 48px;
 }
 
-.mobile-menu .menu {
+.nav-modal .menu {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   list-style-type: none;
   height: 100vh;
   color: #fff;
 }
 
-.mobile-menu .menu-item {
+.nav-modal .menu-item {
   margin: 32px 0;
   display: flex;
+  justify-content: center;
   align-items: center;
+  border-radius: 4px;
+  border: 1px solid #fff;
+  padding: 12px;
 }
 
-.mobile-menu .fa-solid {
+.nav-modal :is(.fa-house, .fa-book, .fa-cart-shopping) {
   font-size: 1.5rem;
   margin-right: 20px;
 }
 
-.mobile-menu .link {
-  font-size: 2.5rem;
+.nav-modal .link {
+  font-size: 2rem;
 }
 
 /*
